# metaldetector-ros

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: receive_config.yaml  send_config.yaml
include/metaldetector_ros/: socketcan_to_topic.h  topic_to_socketcan.h
launch/: start_socketcan.launch  start_with_socketcan.launch
msg/: StampedFloat.msg  StampedSensor.msg
scripts/: metalnode
src/: socketcan_bridge_node.cpp  socketcan_to_topic.cpp  socketcan_to_topic_node.cpp  topic_to_socketcan.cpp  topic_to_socketcan_node.cpp
src/metaldetector_ros/: MetalDetector.py  MetalInterpreter.py
