<?xml version="1.0"?>
<package format="2">
  <name>metaldetector_ros</name>
  <version>0.0.1</version>
  <description>Provides a demo node to parse CAN messages from the metaldetector board.</description>

  <maintainer email="sharst@uos.de">Simon Harst</maintainer>

  <license>LGPL</license>

  <url type="repository">https://github.com/sharst/metaldetector-ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>

</package>
